drone/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: drone
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8000
  - name: grpc
    port: 9000
  selector:
    app: drone-server
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: drone-ui
#   namespace: drone
# spec:
#   type: LoadBalancer
#   ports:
#   - name: http
#     protocol: TCP
#     port: 80
#     targetPort: 8000
#   selector:
#     app: drone-server
