drone/drone.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-server
  namespace: drone
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      containers:
      - name: drone-server
        image: drone/drone:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
        - containerPort: 9000
          protocol: TCP
        resources:
          requests:
            cpu: 40m
            memory: 32Mi
        volumeMounts:
        - name: drone
          mountPath: /var/lib/drone
          subPath: docker/drone
        - name: docker-socket
          mountPath: /var/run/docker.sock
      volumes:
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
      - name: drone
        glusterfs:
          endpoints: glusterfs-cluster
          path: data
          readOnly: false
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-agent
  namespace: drone
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drone-agent
    spec:
      containers:
      - name: drone-agent
        image: drone/agent:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
        - name: docker-socket
          mountPath: /var/run/docker.sock
      volumes:
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
---
apiVersion: v1
kind: Service
metadata:
  name: drone-service
  # namespace: drone
spec:
  # type: LoadBalancer
  # # type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  - name: grpc
    protocol: TCP
    port: 9000
    targetPort: 9000
  selector:
    app: drone-server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: drone.leangeder.eu
    http:
      paths:
      - backend:
          serviceName: drone-service
          servicePort: http
