drone/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
  namespace: drone
  # annotations:
  #   kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: drone.beamery.com
    http:
      paths:
      - backend:
          serviceName: drone-ui
          servicePort: http
